[gd_scene load_steps=3 format=3 uid="uid://gtlpeqsa7tmm"]

[ext_resource type="Script" path="res://scripts/BagOfHolding.gd" id="1_lbt14"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uiv25"]

[node name="BagOfHolding" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_lbt14")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uiv25")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
